# ciunet2

./: Tirecr.1  build_resources_languages.py  ciu_net-pyinstaller4.spec  ciu_net.py  ciu_net.spec  client.py  client.spec  client2.py  config.ini  configconvert.py  configconvert.spec  hook-scipy.optimize._trlib.py  influxpy.py  main.py  makeexe_ciunet_pyinstaller.cmd  pyproject.toml  requirements-win7.txt  requirements.txt  setup.py  setup_old.py  tcemclient.py  tcemclient.spec  tcemserver.py  testconfig.ini
broceni/: ciu_net.py
ciunet/: main.py  resources.py  version.py
config/: broceni3.ini  config.ini  config_defaults.ini  proceni2.ini  scanner1.ini  scanner1.ini.bak  scanner1_pyrometer1Mask.csv.bak  scanner1_pyrometer2Mask.csv.bak  scanner1a.ini  scanner1a3.ini  scanner1a4.ini  scanner1c.ini  scanner2.ini  scanner2a.ini  scanner3.ini  scanner4.ini  scannerMask2.csv  scannerMask3.csv  simulation.ini
config_orig/: proceni1.ini  scanner1_pyrometer10.csv  scanner1_pyrometer1Mask.csv  scanner1a2.ini  scanner1b.ini  statusviewer.ini  tireslip.ini
config_template/: config.ini  config_defaults.ini  scanner1.ini  scanner2.ini  simulation.ini  statusviewer.ini  tireslip.ini
daq_net/: .gitlab-ci.yml  README.md
icon/: Thumbs.db
languages/: de.qm  de.ts  en.ts
logs/: ciunet_status.ini
python_util/: .gitignore
simulator/: README.md  __init__.py  dali_protocol.py  data_viewer.py  geometry_tool.py  line_receiver.py  patterns.py  requirements.txt  scanner_simulator.py
tcem_client/: client1.py  client1.spec  client2.spec  config.ini  configk1.ini  configk2.ini
(+116 files in other folders)
