[project]
name = "clean-ciunet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "configobj>=5.0.9",
    "cryptography==46.0.3",
    "influxdb>=5.3.2",
    "influxpy>=0.2.1",
    "jinja2==3.1.6",
    "numpy==2.3.5",
    "numpy-ringbuffer>=0.2.2",
    "pandas>=3.0.2",
    "pillow==12.0.0",
    "pymodbus>=3.12.1",
    "pyopenssl==25.3.0",
    "pyqt5==5.15.11",
    "pyqtgraph>=0.14.0",
    "python-dateutil==2.9.0",
    "requests==2.32.5",
    "scipy==1.17.1",
    "setuptools>=82.0.1",
    "websockets>=16.0",
]

[tool.uv]
override-dependencies = [
    "pyqt5-qt5; sys_platform != 'win32'",
]
